--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -1,36 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_group"
+    android:id="@+id/activity_new_message"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.schou.push.GroupActivity">
+    tools:context="com.example.schou.push.NewMessageActivity">
+
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
+        android:hint="Message:"
         android:ems="10"
-        android:id="@+id/editText"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true" />
+        android:id="@+id/message"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true" />
 
-    <ListView
-        android:id="@+id/listview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="11dp" />
 
     <Button
-        android:id="@+id/addGroupButton"
-        android:layout_below="@id/listview"
+        android:id="@+id/saveMessageButton"
+        android:layout_below="@id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add New Group" />
+        android:text="Save Message" />
 </RelativeLayout>
