--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.schou.push.MainActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/groupButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Groups" />
+
+    <Button
+        android:id="@+id/messagesButton"
+        android:layout_below="@id/groupButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Messages" />
 </RelativeLayout>
