--- a/app/src/main/res/layout/activity_member.xml
+++ b/app/src/main/res/layout/activity_member.xml
@@ -1,36 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_group"
+    android:id="@+id/activity_member"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.schou.push.GroupActivity">
+    tools:context="com.example.schou.push.NewMemberActivity">
+
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
+        android:hint="Name:"
         android:ems="10"
-        android:id="@+id/editText"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true" />
+        android:layout_marginBottom="40dp"
+        android:id="@+id/memberName" />
 
-    <ListView
-        android:id="@+id/listview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="11dp" />
-
-    <Button
-        android:id="@+id/addGroupButton"
-        android:layout_below="@id/listview"
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add New Group" />
+        android:inputType="phone"
+        android:hint="Phone:"
+        android:ems="10"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="173dp"
+        android:layout_below="@id/memberName"
+        android:id="@+id/memberPhone" />
+
+    <Button
+        android:id="@+id/saveMemberButton"
+        android:layout_below="@id/memberPhone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save Member" />
+
 </RelativeLayout>
