--- a/app/src/main/res/layout/activity_members_in_group.xml
+++ b/app/src/main/res/layout/activity_members_in_group.xml
@@ -1,26 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_group"
+    android:id="@+id/activity_members_in_group"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.schou.push.GroupActivity">
+    tools:context="com.example.schou.push.MembersInGroupActivity">
 
-    <EditText
+    <Button
+        android:id="@+id/addNewMem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:id="@+id/editText"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true" />
+        android:text="Add New Member" />
 
     <ListView
-        android:id="@+id/listview"
+        android:id="@+id/listOfMembers"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
@@ -28,9 +25,11 @@
         android:layout_marginStart="11dp" />
 
     <Button
-        android:id="@+id/addGroupButton"
-        android:layout_below="@id/listview"
+        android:id="@+id/backToGroups"
+        android:layout_below="@id/listOfMembers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add New Group" />
+        android:text="Back" />
+
+
 </RelativeLayout>
