--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="#f394e1"
-    android:statusBarColor="FFFFFFF"
+    android:statusBarColor="#FFFFFF"
 
     tools:context="com.example.schou.push.MainActivity">
 
