--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="#f394e1"
-    android:statusBarColor="#FFFFFF"
 
     tools:context="com.example.schou.push.MainActivity">
 
@@ -58,5 +57,6 @@
         android:id="@+id/textView"
         android:layout_marginTop="12dp"
         android:layout_below="@+id/textView2"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="22dp" />
 </RelativeLayout>
