--- a/app/src/main/res/layout/activity_new_group.xml
+++ b/app/src/main/res/layout/activity_new_group.xml
@@ -21,12 +21,12 @@
         android:layout_marginBottom="40dp"
         android:id="@+id/groupName" />
 
-    <ListView
-        android:id="@+id/listOfMembers"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <!--<ListView-->
+        <!--android:id="@+id/listOfMembers"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
 
-    </ListView>
+    <!--</ListView>-->
 
     <Button
         android:id="@+id/addMemberButton"
