--- a/app/src/main/res/layout/activity_member.xml
+++ b/app/src/main/res/layout/activity_member.xml
@@ -28,8 +28,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:width="200dp"
-        android:height="40dp"
+        android:textSize="28dp"
+        android:height="60dp"
         android:text="Save Member"
+        android:onClick="onClick"
         android:layout_marginBottom="107dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
