--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -39,6 +39,50 @@
                 android:id="@+id/backButton" />
 
 
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:spinnerMode="dialog"
+                android:layout_marginRight="27dp"
+                android:layout_alignBottom="@+id/custom_workout_name"
+                android:layout_centerHorizontal="true" />
+
+            <ScrollView
+                android:id="@+id/scroll"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="200dp"
+                android:fillViewport="true"
+                android:layout_below="@+id/spinner"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="52dp"
+                android:layout_alignParentEnd="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->
+
+                <TextView
+                    android:id="@+id/exercise_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginTop="20dp"
+                    android:textSize="18dp"
+                    android:textColor="@color/colorPrimary" />
+
+            </ScrollView>
+
+            <EditText
+                android:id="@+id/custom_workout_name"
+                android:text="Add Group"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="30dp"
+                android:textColor="@color/colorPrimary"
+                android:layout_below="@+id/addGroup"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="20dp" />
+
             <Button
                 android:id="@+id/setDefaultGroup"
                 android:text="Set Default Group"
@@ -49,56 +93,9 @@
                 android:height="90dp"
                 android:background="#6455d4"
                 style="@android:style/Widget.Holo.Button.Inset"
-                android:layout_marginBottom="38dp"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentStart="true" />
-
-            <LinearLayout
-                android:id="@+id/scroll_wrap"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="35dp"
-                android:layout_alignParentStart="true">
-                <ScrollView
-                    android:id="@+id/scroll"
-                    xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->
-
-                    <TextView
-                        android:id="@+id/exercise_list"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_marginTop="20dp"
-                        android:textSize="18dp"
-                        android:textColor="@color/colorPrimary" />
-
-                </ScrollView>
-            </LinearLayout>
-
-            <EditText
-                android:id="@+id/custom_workout_name"
-                android:text="Add Group"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="30dp"
-                android:textColor="@color/colorPrimary"
-                android:layout_below="@+id/scroll_wrap"
-                android:layout_alignParentStart="true" />
-
-            <Spinner
-                android:id="@+id/spinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:spinnerMode="dialog"
-                android:layout_marginRight="27dp"
-                android:layout_alignBottom="@+id/custom_workout_name"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="11dp" />
+                android:layout_below="@+id/scroll"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="12dp" />
 
         </RelativeLayout>
 
