--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -7,7 +7,9 @@
     android:layout_height="match_parent"
     android:background="#e7bedf"
     tools:context="com.example.schou.push.GroupActivity">
-
+<ScrollView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
     <!-- main content -->
 
         <RelativeLayout
@@ -22,18 +24,19 @@
 
             <ImageButton
                 android:id="@+id/addGroup"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="80dp"
+                android:layout_height="50dp"
                 android:src="@android:drawable/ic_input_add"
                 android:onClick="onClick"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignBottom="@+id/backButton" />
+                android:layout_alignParentTop="true" />
 
             <Button
                 android:layout_width="wrap_content"
                 android:text="back"
                 android:onClick="onClick"
+                android:height="30dp"
+                android:weight="40dp"
                 android:textSize="20dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/backButton" />
@@ -77,32 +80,33 @@
                 android:text="Add Group"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="30dp"
+                android:textSize="40dp"
                 android:textColor="@color/colorPrimary"
+                android:layout_marginTop="41dp"
                 android:layout_below="@+id/addGroup"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="20dp" />
+                android:layout_alignParentStart="true" />
 
             <Button
                 android:id="@+id/setDefaultGroup"
                 android:text="Set Default Group"
-                android:textSize="40dp"
+                android:textSize="30dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
                 android:onClick="onClick"
-                android:height="90dp"
+                android:height="80dp"
                 android:background="#6455d4"
                 style="@android:style/Widget.Holo.Button.Inset"
-                android:layout_below="@+id/scroll"
+                android:layout_alignTop="@+id/scroll"
                 android:layout_alignParentStart="true"
-                android:layout_marginTop="12dp" />
-                android:spinnerMode="dialog"
+                android:layout_marginTop="171dp" />
+            android:spinnerMode="dialog"
                 android:layout_marginRight="27dp"
                 android:layout_alignBottom="@+id/group_name"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="11dp" />
 
         </RelativeLayout>
+</ScrollView>
 
 </android.support.v4.widget.DrawerLayout>
