--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -1,37 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_message"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#e7bedf"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:weightSum="1"
     tools:context="com.example.schou.push.MessageActivity">
 
-    <EditText
+
+    <ImageButton
+        android:id="@+id/addGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:layout_marginTop="15dp"
-        android:id="@+id/editText2"
+        android:src="@android:drawable/ic_input_add"
+        android:onClick="onClick"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <ListView
-        android:id="@+id/listOfMessages"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </ListView>
-
+        android:layout_alignBottom="@+id/backButton" />
 
     <Button
-        android:id="@+id/addNewMessageButton"
-        android:layout_below="@id/listOfMessages"
+        android:id="@+id/backButton2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add New Message" />
-</RelativeLayout>
+        android:onClick="onClick"
+        android:text="back"
+        android:textSize="20dp" />
+
+    <Spinner
+        android:id="@+id/spinner2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/group_name"
+        android:layout_centerHorizontal="true"
+        android:layout_marginRight="27dp"
+        android:spinnerMode="dialog" />
+
+    <ScrollView
+        android:id="@+id/scroll2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/spinner"
+        android:layout_marginTop="52dp"
+        android:fillViewport="true"
+        android:minHeight="200dp"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->
+
+    </ScrollView>
+
+    <Button
+        android:id="@+id/setDefaultGroup"
+        style="@android:style/Widget.Holo.Button.Inset"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+
+        android:layout_below="@+id/scroll2"
+        android:layout_marginTop="12dp"
+        android:height="90dp"
+        android:background="#6455d4"
+        android:onClick="onClick"
+        android:text="Set Default Group"
+        android:textSize="40dp" />
+
+    <TextView
+        android:id="@+id/message_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="20dp"
+        android:text="Add Group"
+        android:textColor="@color/colorPrimary"
+        android:textSize="30dp" />
+
+    <TextView
+        android:id="@+id/message_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="20dp"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18dp"
+        android:layout_weight="0.68" />
+
+    <TextView
+        android:id="@+id/messageHead"
+        android:layout_width="176dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp"
+        android:ems="10"
+        android:hint="Messages:"
+        android:inputType="text"
+        android:textSize="28dp" />
+
+    <!--<ListView-->
+    <!--android:id="@+id/listOfMembers"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content">-->
+
+    <!--</ListView>--><![CDATA[
+
+
+
+
+
+    android:spinnerMode="dialog"
+    android:layout_marginRight="27dp"
+    android:layout_centerHorizontal="true"
+    android:layout_marginBottom="11dp" />
+
+
+
+]]>
+</LinearLayout>
