--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,29 +13,6 @@
     tools:context="com.example.schou.push.MainActivity">
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="32sp"
-        android:text="Preventing Unwanted Social Harassment"
-        android:id="@+id/textView"
-        android:layout_marginTop="12dp"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="22dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="72sp"
-        android:text="P.U.S.H."
-        android:textStyle="bold"
-        android:textColor="#FFFFFF"
-        android:id="@+id/textView2"
-        android:layout_marginTop="56dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
     <Button
         android:id="@+id/activeButton"
         android:layout_width="wrap_content"
@@ -47,8 +24,19 @@
         android:height="60dp"
         android:background="#e157c6"
         android:onClick="onClick"
-        android:layout_marginBottom="31dp"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true" />
+
+    <Button
+        android:id="@+id/messageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Messages"
+        android:width="500dp"
+        android:height="65dp"
+        android:textSize="24dp"
+        android:onClick="onClick"
+        android:layout_above="@+id/groupButton"
         android:layout_alignParentStart="true" />
 
     <Button
@@ -57,21 +45,41 @@
     android:layout_height="wrap_content"
     android:text="Groups"
     android:width="500dp"
-    android:height="60dp"
+    android:height="65dp"
         android:textSize="24dp"
     android:onClick="onClick"
         android:layout_above="@+id/activeButton"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="10dp" />
 
-    <Button
-        android:id="@+id/messageButton"
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/speechbubble"
+        android:id="@+id/imageView"
+        android:layout_marginTop="21dp"
+        android:layout_below="@+id/textView2"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Messages"
-        android:width="500dp"
-        android:height="60dp"
-        android:textSize="24dp"
-        android:onClick="onClick"
-        android:layout_above="@+id/groupButton"
-        android:layout_alignParentStart="true" />
+        android:textSize="32sp"
+        android:text="Preventing Unwanted Social Harassment"
+        android:id="@+id/textView"
+        android:gravity="center"
+        android:layout_marginTop="68dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="72sp"
+        android:text="P.U.S.H."
+        android:textStyle="bold"
+        android:textColor="#FFFFFF"
+        android:id="@+id/textView2"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
