--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_message"
     android:layout_width="match_parent"
@@ -15,7 +15,7 @@
 
 
     <ImageButton
-        android:id="@+id/addGroup"
+        android:id="@+id/addNewMessageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@android:drawable/ic_input_add"
@@ -32,53 +32,6 @@
         android:text="back"
         android:textSize="20dp" />
 
-    <Spinner
-        android:id="@+id/spinner2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/group_name"
-        android:layout_centerHorizontal="true"
-        android:layout_marginRight="27dp"
-        android:spinnerMode="dialog" />
-
-    <ScrollView
-        android:id="@+id/scroll2"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/spinner"
-        android:layout_marginTop="52dp"
-        android:fillViewport="true"
-        android:minHeight="200dp"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->
-
-    </ScrollView>
-
-    <Button
-        android:id="@+id/setDefaultGroup"
-        style="@android:style/Widget.Holo.Button.Inset"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-
-        android:layout_below="@+id/scroll2"
-        android:layout_marginTop="12dp"
-        android:height="90dp"
-        android:background="#6455d4"
-        android:onClick="onClick"
-        android:text="Set Default Group"
-        android:textSize="40dp" />
-
-    <TextView
-        android:id="@+id/message_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="20dp"
-        android:text="Add Group"
-        android:textColor="@color/colorPrimary"
-        android:textSize="30dp" />
-
     <TextView
         android:id="@+id/message_list"
         android:layout_width="match_parent"
@@ -91,15 +44,61 @@
         android:textSize="18dp"
         android:layout_weight="0.68" />
 
-    <TextView
-        android:id="@+id/messageHead"
-        android:layout_width="176dp"
+    <Button
+        android:id="@+id/setDefaultMessage"
+        style="@android:style/Widget.Holo.Button.Inset"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
-        android:ems="10"
-        android:hint="Messages:"
-        android:inputType="text"
-        android:textSize="28dp" />
+        android:height="70dp"
+        android:background="#6455d4"
+        android:onClick="onClick"
+        android:text="Set Default Message"
+        android:textSize="30dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="19dp" />
+
+    <ScrollView
+        android:id="@+id/scroll2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:fillViewport="true"
+        android:minHeight="200dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="10dp"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->
+
+        <TextView
+            android:id="@+id/message_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="40dp"
+            android:ems="10"
+            android:hint="Messages:"
+            android:inputType="text"
+            android:textSize="28dp" />
+    </ScrollView>
+
+    <Spinner
+        android:id="@+id/spinner2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="27dp"
+        android:spinnerMode="dialog"
+        android:layout_alignTop="@+id/message_head"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="23dp" />
+
+    <TextView
+        android:id="@+id/message_head"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="17dp"
+        android:text="Choose Message"
+        android:textColor="@color/colorPrimary"
+        android:textSize="30dp"
+        android:layout_below="@+id/addNewMessageButton"
+        android:layout_alignParentStart="true" />
 
     <!--<ListView-->
     <!--android:id="@+id/listOfMembers"-->
@@ -120,4 +119,4 @@
 
 
 ]]>
-</LinearLayout>
+</RelativeLayout>
