--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,32 +10,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="#e7bedf"
 
-    tools:context="com.example.schou.push.MainActivity">
+    tools:context="com.example.code.push.MainActivity">
 
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="32sp"
-        android:text="Preventing Unwanted Social Harassment"
-        android:id="@+id/textView"
-        android:layout_marginTop="12dp"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="22dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-
-        android:layout_height="wrap_content"
-        android:textSize="72sp"
-        android:text="P.U.S.H."
-        android:textStyle="bold"
-        android:textColor="#FFFFFF"
-        android:id="@+id/textView2"
-        android:layout_marginTop="56dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
 
     <Button
 
@@ -93,12 +69,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="28sp"
+        android:textSize="32sp"
         android:text="Preventing Unwanted Social Harassment"
-        android:gravity="center"
         android:id="@+id/textView"
         android:layout_above="@+id/imageView2"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="13dp" />
+        android:layout_marginStart="25dp" />
 
 </RelativeLayout>
